--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,15 @@ authors = ["MauroMartinsJr <maurojosedmjr@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = "^0.111.0"
+requests = "^2.32.3"
+cachebox = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
+ruff = "^0.4.8"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
